@@ -329,6 +329,7 @@ S3method(matchCoefs, lme)
 S3method(matchCoefs, mer)
 S3method(matchCoefs, merMod)
 S3method(matchCoefs, mlm)
+S3method(matchCoefs, lmList)
 S3method(mcPlots, default)
 S3method(mcPlot, lm)
 S3method(mmp, default)
